<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.casgar.test.shortestpathrecursive.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etMatrix" />

    <Button
        android:text="Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bStart" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/tvResult"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />


</LinearLayout>
